<resources>
    <string name="app_name">Multi-Calculator</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="scale">Number of decimal places</string>
    <string name="messages_header">Calculation Preference</string>
    <string name="sync_header">Usage Preference</string>
    <string name="vib">Vibration</string>
    <string name="choose">Choose</string>
    <string name="length">Length</string>
    <string name="area">Area</string>
    <string name="programmer">Numeric Base</string>
    <string name="volume">Volume</string>
    <string name="help_us">HELP US</string>
    <string name="rate">Rate this app</string>
    <string name="social">SOCIAL</string>
    <string name="github">Github</string>
    <string name="other">OTHER</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="app_version">Version</string>
    <string name="thank">Thanks for Using!!!</string>
    <string name="UnitsActivity">Unit</string>
    <string name="clearAll">Clear all History</string>
    <string name="compassActivity">Compass</string>
    <string name="mass">Mass</string>
    <string name="tempe">Temperature</string>
    <string name="storage">Storage</string>
    <string name="theme">Theme</string>
    <string name="changeTheme">Change the app\'s theme</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="permission">Please agree to the permission to use all functions.</string>
    <string name="north">Due North</string>
    <string name="south">Due South</string>
    <string name="northeast">NE</string>
    <string name="northwest">NW</string>
    <string name="southeast">SE</string>
    <string name="southwest">SW</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="magnetic">Magnetic Field Strength</string>
    <string name="not_available">N/A</string>
    <string name="magnetic_declination">Magnetic Declination %.1f°</string>
    <string name="true_heading">True Heading %d°</string>
    <string name="wake">Keep the screen always on</string>
    <string name="wakeSummery">Prevent phone from sleeping when app is in foreground</string>
    <string name="language">Language</string>
    <string name="languageChange">Change the app\'s language</string>
    <string name="share_this_app">Share this app</string>
    <string name="shareContent">Download Multi-Calculator right now! It has everything you need for solving everyday math problems, unit conversions, date calculations, BMI calculations, currency exchange rate conversions, and even a compass feature. It\'s user-friendly with a beautiful interface. Click the link to download: https://play.google.com/store/apps/details?id=com.yangdai.calc</string>
    <string name="text_date_diff">Date Interval</string>
    <string name="text_addsub_date">Date Calculation</string>
    <string name="dateActivity">Date</string>
    <string name="text_same_day">Same Day</string>
    <string name="startDate">Start Date:</string>
    <string name="add">Add</string>
    <string name="sub">Subtract</string>
    <string name="clear">Clear</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="endDate">End Date:</string>
    <string name="interval">Date Interval in Days:</string>
    <string name="pressure">Pressure</string>
    <string name="heat">Heat</string>
    <string name="time">Time</string>
    <string name="bmiActivity">BMI</string>
    <string name="angle">Angle</string>
    <string name="reset">RESET</string>
    <string name="kg">KG</string>
    <string name="_00_00" translatable="false">0.00</string>
    <string name="bmi" translatable="false">BMI</string>
    <string name="height_cm">Height:</string>
    <string name="weight_kg">Weight:</string>
    <string name="underweight">Underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="_16_0_19_9" translatable="false">16.0 ~ 16.9</string>
    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="_16_0" translatable="false"><![CDATA[< 16.0]]></string>
    <string name="_17_0_18_4" translatable="false">17.0 ~ 18.4</string>
    <string name="healthy">Healthy</string>
    <string name="_18_5_24_9" translatable="false">18.5 ~ 24.9</string>
    <string name="overweight">Overweight</string>
    <string name="_25_0_29_9" translatable="false">25.0 ~ 29.9</string>
    <string name="_30_0_34_9" translatable="false">30.0 ~ 34.9</string>
    <string name="obese_class_i">Obese Class I</string>
    <string name="obese_class_ii">Obese Class II</string>
    <string name="_35_0_39_9" translatable="false">35.0 ~ 39.9</string>
    <string name="obese_class_iii">Obese Class III</string>
    <string name="_40_0" translatable="false">≥ 40.0</string>
    <string name="need_healthy">For healthy life You have to increase:</string>
    <string name="lose_healthy">For healthy life You have to decrease:</string>
    <string name="exchangeActivity">Currency</string>
    <string name="app_osl">Open Source Licenses</string>
    <string name="chineseNumberConverter">Chinese Number</string>
    <string name="donate">Buy a Coffee for the developer</string>
    <string name="arabic_numbers">Arabic Numerals:</string>
    <string name="chinese_big_numbers">Uppercase Chinese Numerals:</string>
    <string name="email">E-mail</string>
    <string name="relationshipActivity">Kinship Title</string>
    <string name="relationship">Kinship:</string>
    <string name="call">Title:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="historys">History</string>
    <string name="inverseCall">Swap Identities</string>
    <string name="resize">Show Floating Window</string>
    <string name="discount_fragment">Discount</string>
    <string name="originalPrice">Original Price:</string>
    <string name="discount">Discount(%):</string>
    <string name="discountedPrice">Discounted Price:</string>
    <string name="savedAmount">Saved Amount:</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="newest">Already the latest version</string>
    <string name="checkNet">Network Error</string>
    <string name="ecb">Using exchange rate data from the European Central Bank</string>
    <string name="bankFragment">Bank Deposit</string>
    <string name="roiFragment">Return on Investment</string>
    <string name="loanFragment">Loan</string>
    <string name="financeActivity">Finance</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="half">Every half year</string>
    <string name="yearly">Yearly</string>
    <string name="end">At the end</string>
    <string name="principal">Principal:</string>
    <string name="interest_rate">Annual Interest Rate (%):</string>
    <string name="period">Period (in months):</string>
    <string name="capitalization">Interest Settlement Date:</string>
    <string name="investment_amount">Investment Amount:</string>
    <string name="settlement_amount">Settlement Amount:</string>
    <string name="loan_amount">Loan Amount:</string>
    <string name="monthly_payment">Monthly Payment:</string>
    <string name="total_interest">Total Interest:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="profit">Profit:</string>
    <string name="profitMargin">Profit Margin:</string>
    <string name="annualized_rate_of_return">Annualized Rate of Return:</string>
    <string name="tip">Tip: Annualized Rate of Return = ((Principal + Gain) / Principal) ^ (365 / Days) - 1</string>
    <string name="vat">VAT</string>
    <string name="amount">Amount:</string>
    <string name="tax">Tax (%)：</string>
    <string name="included">Amount includes VAT</string>
    <string name="taxIncludedAmount">Total Amount with VAT：</string>
    <string name="taxExcludedAmount">Total Amount without VAT：</string>
    <string name="equal">equals</string>
    <string name="resetInput">reset</string>
    <string name="inverse">invert</string>
    <string name="bracket">bracket</string>
    <string name="addNum">plus</string>
    <string name="minusNum">minus</string>
    <string name="multiplyNum">multiply by</string>
    <string name="divideNum">divide by</string>
    <string name="point">point</string>
    <string name="percentage">take percent</string>
    <string name="power">power</string>
    <string name="factorial">factorial</string>
    <string name="double_factorial">double factorial</string>
    <string name="voice">Button sound</string>
    <string name="voiceContent">Read the button content when the button is pressed</string>
    <string name="get_more_apps">Explore more apps</string>
    <string name="sin">sine</string>
    <string name="cos">cosine</string>
    <string name="tan">tangent</string>
    <string name="cot">cotangent</string>
    <string name="atan">arctangent</string>
    <string name="acot">arccotangent</string>
    <string name="asin">arcsine</string>
    <string name="acos">arccosine</string>
    <string name="trigonometric">Trigonometric functions</string>
    <string name="deg">Calculate trigonometric functions using angles</string>
    <string name="rad">Calculate trigonometric functions using radians</string>
    <string name="log">logarithm</string>
    <string name="ln">natural logarithm</string>
    <string name="tips">Tips</string>
    <string name="updateDate">The data was updated on:</string>
    <string name="powerUnit">Power</string>
    <string name="air_pressure">Atmospheric Pressure</string>
    <string name="bigNum">The value is too large</string>
    <string name="formatError">Invalid Input</string>
    <string name="_30_60_t">The magnetic field environment is abnormal, the normal range is 20~60μT</string>
    <string name="randomActivity">Random Number</string>
    <string name="generator">Generator</string>
    <string name="draw">Draw</string>
    <string name="count">Quantity</string>
    <string name="minValue">Minimum</string>
    <string name="maxValue">Maximum</string>
    <string name="repeat">Numbers can be repeated</string>
    <string name="result">Result:</string>
    <string name="generate">Generate</string>
    <string name="start_pause">Start / Pause</string>
    <string name="hasCleaned">All history cleared</string>
    <string name="EquationActivity">Equation</string>
    <string name="linear">Linear Equation</string>
    <string name="quadratic">Quadratic Equation</string>
    <string name="noRoot">No real roots</string>
    <string name="noHistory">No history</string>
    <string name="statisticActivity">Mathematical Statistic</string>
    <string name="gcd">GCF:</string>
    <string name="lcm">LCM:</string>
    <string name="numbers">Numbers:</string>
    <string name="number">Number:</string>
    <string name="addNumber">Add Number:</string>
    <string name="avg0">Arithmetic Mean:</string>
    <string name="avg1">Geometric Mean:</string>
    <string name="avg2">Harmonic Mean:</string>
    <string name="avg3">Square Average:</string>
    <string name="diff0">Variance:</string>
    <string name="diff1">Standard Deviation:</string>
    <string name="sum">Sum:</string>
    <string name="jump">Skip</string>
    <string name="toDecimal">Fraction to Decimal</string>
    <string name="toFraction">Decimal to Fraction</string>
    <string name="numberConvert">Fraction</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="embedding">Activity embedding</string>
    <string name="embedding_content">Display activities in parallel on large-screen devices</string>
    <string name="historyNum">Results saved in history</string>
</resources>