<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <SeekBarPreference
            android:defaultValue="10"
            android:icon="@drawable/scale_123"
            android:max="10"
            app:adjustable="true"
            app:key="scale"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/scale"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/mode_edit_outline"
            app:key="mode"
            app:summaryOff="@string/rad"
            app:summaryOn="@string/deg"
            app:title="@string/trigonometric"
            app:widgetLayout="@drawable/material_switch" />

        <SeekBarPreference
            android:defaultValue="100"
            android:icon="@drawable/history"
            android:max="100"
            app:adjustable="true"
            app:key="historyNum"
            app:min="20"
            app:showSeekBarValue="true"
            app:title="@string/historyNum"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:icon="@drawable/delete_outline"
            app:key="clean"
            app:summary="@string/clearAll"
            app:title="@string/historys" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/vibration"
            app:key="vib"
            app:title="@string/vib"
            app:widgetLayout="@drawable/material_switch" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/speech_text"
            app:key="voice"
            app:summary="@string/voiceContent"
            app:title="@string/voice"
            app:widgetLayout="@drawable/material_switch" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/phone_android"
            app:key="screen"
            app:summary="@string/wakeSummery"
            app:title="@string/wake"
            app:widgetLayout="@drawable/material_switch" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/splitscreen"
            app:key="split"
            app:summary="@string/embedding_content"
            app:title="@string/embedding"
            app:widgetLayout="@drawable/material_switch" />

        <Preference
            android:icon="@drawable/theme_color"
            app:key="theme"
            app:summary="@string/changeTheme"
            app:title="@string/theme" />

        <Preference
            android:icon="@drawable/language"
            app:key="language"
            app:summary="@string/languageChange"
            app:title="@string/language" />

    </PreferenceCategory>

</PreferenceScreen>